# we-whacked

./: .gitignore  404.html  TODO.md  index.html  pyproject.toml  sitemap.xml  test_gemini_models.py
docs/: CHATBOT_ARCHITECTURE.md  CHATBOT_QUICK_START.md  CHATBOT_SETUP.md  TROUBLESHOOTING.md
help/: index.html
scripts/: README.md  run_servers.sh
search/: search_index.json
src/backend/: .env.example  CACHE_API.md  README.md  REVIEWS_API.md  __init__.py  config.py  main.py  requirements.txt
src/backend/data/: locations.parquet  reviews.parquet  service_requests.parquet
src/backend/routes/: __init__.py  api.py  cache.py  chatbot.py  health.py  restrooms.py  reviews.py  service_requests.py
src/frontend/: main.py  main.py.bak.1763854165
