[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "we-whacked"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">3.11"
authors = [
	{ name = "scott-cjx" }
]
dependencies = [
	"fastapi",
	"uvicorn[standard]",
    "streamlit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

